syntax = "proto3";
package org.phenopackets.schema.v1;

import "org/phenopackets/schema/v1/core/base.proto";

// Phenotype, sample and pedigree data required for a rare disease diagnosis.
// Equivalent to the Genomics England InterpretationRequestRD
// https://github.com/genomicsengland/GelReportModels/blob/master/schemas/IDLs/org.gel.models.report.avro/5.0.0/InterpretationRequestRD.avdl
message RareDiseaseSampleData {
    string id = 1;
    string title = 2;
    string description = 3;
    string proband_id = 4;
    org.phenopackets.schema.v1.core.Pedigree pedigree = 5;
    repeated org.phenopackets.schema.v1.core.Individual individuals = 6;
    org.phenopackets.schema.v1.core.File vcf = 7;
    org.phenopackets.schema.v1.core.GenomeAssembly genome_assembly = 8;
    org.phenopackets.schema.v1.core.MetaData meta_data = 9;
}